--- a/src/favorites.html
+++ b/src/favorites.html
@@ -14,6 +14,9 @@
     <main>
       <load ="./partials/hero-favorites.html" />
       <load ="./partials/favorit-images.html" />
+      <load ="./partials/modal-recipe.html"/>
+    <load ="./partials/modal-rating.html"/>
+    <load ="./partials/modal-order.html"/>
     </main>
   </body>
 </html>
