--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
     <load ="./partials/filters.html"/>
     <load ="./partials/categories.html"/>
     <load ="./partials/popular.html"/>
+    <load ="./partials/modal-recipe.html"/>
+    <load ="./partials/modal-rating.html"/>
+    <load ="./partials/modal-order.html"/>
   </main>
 
 
