--- a/src/favorites.html
+++ b/src/favorites.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Favorites</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
@@ -14,9 +14,9 @@
     <main>
       <load ="./partials/hero-favorites.html" />
       <load ="./partials/favorit-images.html" />
-      <load ="./partials/modal-recipe.html"/>
-    <load ="./partials/modal-rating.html"/>
-    <load ="./partials/modal-order.html"/>
+      <load ="./partials/modal-recipe.html" />
+      <load ="./partials/modal-rating.html" />
+      <load ="./partials/modal-order.html" />
     </main>
   </body>
 </html>
