--- a/src/favorites.html
+++ b/src/favorites.html
@@ -18,5 +18,6 @@
       <load ="./partials/modal-rating.html" />
       <load ="./partials/modal-order.html" />
     </main>
+    <script type="module" src="./js/favoriteRecipes.js"></script>
   </body>
 </html>
