--- a/src/favorites.html
+++ b/src/favorites.html
@@ -28,6 +28,6 @@
     <load ="./partials/modal-rating.html"/>
     <load ="./partials/modal-order.html"/>
     </main>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./favorit-main.js"></script>
   </body>
 </html>
