Adds to top button

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 
+
     <title>Tasty Treats</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,9 +20,9 @@
       referrerpolicy="no-referrer"
     />
     <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-/>
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -39,8 +39,8 @@
       <load ="./partials/modal-recipe.html" />
       <load ="./partials/modal-rating.html" />
       <load ="./partials/modal-order.html" />
+      <load ="./partials/to-top-button.html" />
     </main>
-    
 
     <script type="module" src="./main.js"></script>
   </body>
