--- a/src/favorites.html
+++ b/src/favorites.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title>Vanilla App Template</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Inter:wght@400;500;600&family=Poppins:wght@600&display=swap" rel="stylesheet">
-<link
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Inter:wght@400;500;600&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
@@ -25,9 +28,10 @@
     <main>
       <load ="./partials/hero-favorites.html" />
       <load ="./partials/favorit-images.html" />
-      <load ="./partials/modal-recipe.html"/>
-    <load ="./partials/modal-rating.html"/>
-    <load ="./partials/modal-order.html"/>
+      <load ="./partials/modal-recipe.html" />
+      <load ="./partials/modal-rating.html" />
+      <load ="./partials/modal-order.html" />
+      <load ="./partials/to-top-button.html" />
     </main>
     <script type="module" src="./favorit-main.js"></script>
   </body>
